<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="ble_category"
        app:title="Bluetooth Low Energy">

        <CheckBoxPreference
            app:icon="@drawable/ic_battery"
            app:key="batteryEnabled"
            app:title="@string/settingsBatteryEnabled"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:icon="@drawable/ic_bluetooth"
            app:key="macAddress"
            app:title="@string/settingsBluetoothMac"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="000000"
            app:icon="@drawable/ic_key"
            app:key="blePin"
            app:title="@string/settingsBluetoothPin"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:icon="@drawable/ic_bike"
            app:key="bikeEnabled"
            app:title="@string/settingsBikeEnabled"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:icon="@drawable/ic_bluetooth"
            app:key="macAddressBike"
            app:title="@string/settingsBluetoothMacBike"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="000000"
            app:icon="@drawable/ic_key"
            app:key="blePinBike"
            app:title="@string/settingsBluetoothPinBike"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="general_category"
        app:title="BMS">

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="1000"
            app:icon="@drawable/ic_refresh"
            app:key="refreshInterval"
            app:title="@string/settingsRefreshInterval"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="5"
            app:icon="@drawable/ic_time"
            app:key="smoothingMinutes"
            app:title="@string/settingsSmoothingMinutes"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="-500"
            app:icon="@drawable/ic_energy"
            app:key="minPower"
            app:title="@string/settingsMinPower"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="1000"
            app:icon="@drawable/ic_energy"
            app:key="maxPower"
            app:title="@string/settingsMaxPower"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="battery_category"
        app:title="Battery">

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="3000"
            app:icon="@drawable/ic_bolt"
            app:key="minCellVoltage"
            app:title="@string/settingsMinCellVoltage"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="4200"
            app:icon="@drawable/ic_bolt"
            app:key="maxCellVoltage"
            app:title="@string/settingsMaxCellVoltage"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="bike_category"
        app:title="Bike">

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="35"
            app:icon="@drawable/ic_speed"
            app:key="maxSpeed"
            app:title="@string/settingsMaxSpeed"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>