<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBase"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bgBase"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageBar"
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imageBattery"
            app:srcCompat="@drawable/ic_appbar_icon"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="13dp" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fira_sans_condensed"
            android:text="@string/app_name_big"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:logo="@drawable/ic_appbar_icon"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="14dp" />

        <TextView
            android:id="@+id/toolbarTitleThin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/fira_sans_condensed_light"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:text="@string/app_name_thin"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:logo="@drawable/ic_appbar_icon"
            tools:layout_editor_absoluteX="209dp"
            tools:layout_editor_absoluteY="11dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
        app:navGraph="@navigation/nav_graph" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bgBase"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>